# mwalks

./: .gitignore  MapAllRoutesFromDb.ipynb  README.md  Route from 2021-02-02 08 27_20210202082755.gpx  Summary.ipynb  create_and_load_database.ipynb  db_load.py  db_routes.py  explore.ipynb  haversine.py  interval_speeds.ipynb  list_route_dates.py  load_db.py  location_after_time.ipynb  multi_route.ipynb  mwalks.sqlite  parse_xml.ipynb  plotter.ipynb  pyproject.toml  requirements.txt  slicer.py  summarise.py  test_haversine.py  walks.py
lib/: __init__.py  calcs.py  point.py  route.py  route_collections.py  segment.py  types.py  walks.py
notebooks/: plotter.ipynb
tests/: test_haversine.py  test_point.py
