[project]
name = "mwalks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "dataclasses-json>=0.6.7",
    "fiona>=1.10.1",
    "icecream>=2.1.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pillow>=11.1.0",
    "pytest>=8.3.4",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
